--- a/portfolio-v1/src/app.css
+++ b/portfolio-v1/src/app.css
@@ -1,10 +1,6 @@
-#root {
-  width: 100vh;
-}
-
 body {
   min-width: 100%;
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
