--- a/portfolio-v1/src/components/Projects/projects.module.css
+++ b/portfolio-v1/src/components/Projects/projects.module.css
@@ -1,16 +1,14 @@
-body {
+/* body {
   margin: 0;
   height: 100%;
-}
+} */
 
-.container {
-  position: absolute;
-  top: 100vh;
+/* .container { */
+/* position: relative;
+
   background-color: rgb(255, 255, 255);
   color: black;
-  width: 100%;
-  height: 100vh;
-}
+} */
 
 .flexContainer {
   position: relative;
