--- a/portfolio-v1/src/components/Skills/skills.module.css
+++ b/portfolio-v1/src/components/Skills/skills.module.css
@@ -1,11 +1,11 @@
-body {
+/* body {
   margin: 0;
   height: 100%;
-}
+} */
 
 .container {
-  position: absolute;
-  top: 250vh;
+  position: relative;
+
   background-color: rgb(0, 0, 0);
   width: 100%;
   height: 100vh;
