--- a/portfolio-v1/src/components/Home/home.module.css
+++ b/portfolio-v1/src/components/Home/home.module.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap");
 
 .homeContainer {
   /* background-color: black;
@@ -7,70 +8,80 @@
   width: 100vh; */
   position: relative;
 
-  background-color: black;
+  background-color: #f4f3ef;
   width: 100%;
   height: 100vh;
   display: inline-flex;
   justify-content: center;
   align-items: center;
+  padding-bottom: 0;
+  margin-bottom: 0;
 }
 
 .img {
   border-radius: 20%;
   position: relative;
-  height: 40vh;
-  left: -75vh;
-  top: 8vh;
-  box-shadow: #93a9ff 0px 15px 29px 0px;
+  height: 60vh;
+  bottom: -20vh;
+  left: 65vh;
+
+  /* box-shadow: #93a9ff 0px 15px 29px 0px; */
 }
 
 .name {
-  position: relative;
-  font-family: "Open Sans", sans-serif;
-  font-size: 4.5em;
-  color: #ffffff;
-  left: 15vh;
-  top: -20vh;
+  position: absolute;
+  font-family: serif;
+  font-size: 4em;
+  color: black;
+  left: 10vh;
+  top: 10vh;
   width: 80vh;
   display: block;
+  z-index: 2;
 }
 
 .title {
-  position: relative;
+  position: absolute;
   display: block;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 2em;
-  color: #93a9ff;
-  top: -28vh;
-  left: 15vh;
+  color: #927d7d;
+  top: 23vh;
+  left: 10vh;
+  z-index: 2;
 }
 
 .description {
   position: relative;
   color: white;
-  right: 9vh;
-  font-family: "Open Sans", sans-serif;
-  min-width: 35vw;
+  right: -50vh;
+  font-family: "Raleway", sans-serif;
+  min-width: 30vw;
+  max-width: 10vw;
   font-size: 1.5em;
+  background-color: #849994;
+  margin-right: 5em;
+  padding: 2em;
+  height: 20vh;
 }
 
 .projectsButton {
   display: inline-block;
-  padding: 0.35em 1.2em;
-  border: 0.1em solid #93a9ff;
+  padding: 15px;
+  border: none;
   margin: 0 0.3em 0.3em 0;
-  border-radius: 0.12em;
+  border-radius: 3px;
   box-sizing: border-box;
   text-decoration: none;
   font-family: "Roboto", sans-serif;
   font-weight: 300;
-  color: #000000;
+  background-color: #c89a8e;
   text-align: center;
   transition: all 0.2s;
 
   position: relative;
   top: 20vh;
-  right: 55vh;
+  left: 5vh;
 }
 
 .projectsButton:hover {
@@ -82,4 +93,14 @@
   height: auto;
   position: absolute;
   top: 72vh;
+}
+
+.circle {
+  height: 50vh;
+  width: 50vh;
+  background-color: #ca9a8e;
+  border-radius: 100%;
+  position: absolute;
+  top: 60vh;
+  left: -20vh;
 }
