--- a/portfolio-v1/src/components/Navbar/navbar.module.css
+++ b/portfolio-v1/src/components/Navbar/navbar.module.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap");
 
 .navbarContainer {
-  background-color: black;
+  background-color: #f4f3ef;
   display: inline-flex;
   justify-content: flex-end;
   align-items: center;
@@ -11,11 +11,11 @@
   margin: 0;
   position: fixed;
   z-index: 3;
-  border-bottom: white 0.8px solid;
+  /* border-bottom: white 0.8px solid; */
 }
 
 a {
-  color: white;
+  color: rgb(20, 54, 17);
   text-decoration: none;
   font-size: 1.5em;
   font-family: "Open Sans", sans-serif;
