--- a/portfolio-v1/src/components/Projects/projects.module.css
+++ b/portfolio-v1/src/components/Projects/projects.module.css
@@ -3,16 +3,15 @@
   height: 100%;
 } */
 
-/* .container { */
-/* position: relative;
-
-  background-color: rgb(255, 255, 255);
-  color: black;
-} */
+.container {
+  margin-top: 0;
+  padding-top: 0;
+  background-color: #f4f3ef;
+}
 
 .flexContainer {
   position: relative;
-  background-color: rgb(255, 255, 255);
+  background-color: #f4f3ef;
   color: black;
   display: flex;
   justify-content: space-around;
@@ -21,8 +20,8 @@
 
 .heading {
   font-size: 3vh;
-  margin: 6vh;
-  color: #93a9ff;
+
+  color: rgb(85, 79, 79);
   position: relative;
   z-index: 1;
 }
