--- a/portfolio-v1/src/components/Projects/projects.module.css
+++ b/portfolio-v1/src/components/Projects/projects.module.css
@@ -1,7 +1,4 @@
-/* body {
-  margin: 0;
-  height: 100%;
-} */
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,800;1,400&display=swap");
 
 .container {
   margin-top: 0;
@@ -19,8 +16,9 @@
 }
 
 .heading {
-  font-size: 3vh;
-
+  font-size: 2em;
+  margin: 10vh;
+  font-family: "Playfair Display", serif;
   color: rgb(85, 79, 79);
   position: relative;
   z-index: 1;
