--- a/portfolio-v1/src/components/Home/home.module.css
+++ b/portfolio-v1/src/components/Home/home.module.css
@@ -1,5 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,800;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital@1&display=swap");
 
 .homeContainer {
   /* background-color: black;
@@ -23,17 +23,18 @@
   position: relative;
   height: 60vh;
   bottom: -20vh;
-  left: 65vh;
+  left: 20vh;
+  z-index: 1;
 
   /* box-shadow: #93a9ff 0px 15px 29px 0px; */
 }
 
 .name {
   position: absolute;
-  font-family: serif;
+  font-family: "Playfair Display", serif;
   font-size: 4em;
   color: black;
-  left: 10vh;
+  left: 15vh;
   top: 10vh;
   width: 80vh;
   display: block;
@@ -43,56 +44,57 @@
 .title {
   position: absolute;
   display: block;
-  font-family: "Raleway", sans-serif;
+  font-family: sans-serif;
   font-size: 2em;
+  font-weight: 200;
+  font-style: italic;
   color: #927d7d;
   top: 23vh;
-  left: 10vh;
+  left: 15vh;
   z-index: 2;
 }
 
 .description {
   position: relative;
-  color: white;
-  right: -50vh;
+  color: rgb(0, 0, 0);
+  right: -15vh;
   font-family: "Raleway", sans-serif;
   min-width: 30vw;
   max-width: 10vw;
   font-size: 1.5em;
   background-color: #849994;
-  margin-right: 5em;
+
+  margin-right: 10em;
   padding: 2em;
-  height: 20vh;
+  height: 25vh;
+  border-radius: 10px;
+  overflow: scroll;
 }
 
 .projectsButton {
   display: inline-block;
-  padding: 15px;
+  padding: 20px;
+  width: auto;
   border: none;
   margin: 0 0.3em 0.3em 0;
   border-radius: 3px;
   box-sizing: border-box;
   text-decoration: none;
   font-family: "Roboto", sans-serif;
-  font-weight: 300;
-  background-color: #c89a8e;
+  font-weight: 500;
+  font-size: 1em;
+  background-color: #ffffff;
   text-align: center;
   transition: all 0.2s;
-
+  border-radius: 10px;
   position: relative;
-  top: 20vh;
-  left: 5vh;
+  top: 30vh;
+  left: -60vh;
 }
 
 .projectsButton:hover {
   color: #000000;
-  background-color: #93a9ff;
-}
-
-.wave {
-  height: auto;
-  position: absolute;
-  top: 72vh;
+  background-color: #c89a8e;
 }
 
 .circle {
@@ -101,6 +103,12 @@
   background-color: #ca9a8e;
   border-radius: 100%;
   position: absolute;
-  top: 60vh;
+  top: 50vh;
   left: -20vh;
+}
+
+.style {
+  position: relative;
+  top: 25vh;
+  left: -35vh;
 }
