--- a/portfolio-v1/src/components/Navbar/navbar.module.css
+++ b/portfolio-v1/src/components/Navbar/navbar.module.css
@@ -3,7 +3,7 @@
 .navbarContainer {
   background-color: #f4f3ef;
   display: inline-flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
   width: 100%;
   height: 8vh;
@@ -15,24 +15,26 @@
 }
 
 a {
-  color: rgb(20, 54, 17);
+  color: rgb(100, 92, 92);
   text-decoration: none;
-  font-size: 1.5em;
+  font-size: 1.7em;
   font-family: "Open Sans", sans-serif;
   font-weight: 100;
+  padding: 2vh;
 }
 
 a:hover {
-  color: #93a9ff;
+  color: #c89a8e;
   transition: all 0.2s;
 }
 .navbarLinks {
   padding-right: 3vh;
+  position: relative;
+  top: -10px;
 }
 
 .socialIcon {
-  font-size: 4vh;
-  padding-right: 5px;
+  font-size: 5ch;
 }
 
 nav {
