--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -1,16 +1,14 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@300&family=Rozha+One&family=Yeseva+One&display=swap");
 
 .navbarContainer {
-
   background-color: #f4f3ef;
   display: inline-flex;
   justify-content: center;
-
-
   align-items: center;
+  top: 5vh;
   width: 100%;
   height: 8vh;
-  padding: 0;
+  padding: 2vh;
   margin: 0;
   position: fixed;
   z-index: 3;
@@ -22,7 +20,8 @@ a {
   color: rgb(100, 92, 92);
   text-decoration: none;
   font-size: 1.7em;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Red Hat Display", sans-serif;
+
   font-weight: 100;
   padding: 2vh;
 }
@@ -40,9 +39,15 @@ a:hover {
 
 .socialIcon {
   font-size: 5ch;
-
 }
 
 nav {
   padding-right: 10px;
+}
+
+.name {
+  font-family: "Yeseva One", cursive;
+  padding-right: 3vh;
+  position: relative;
+  top: -10px;
 }
