--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -19,7 +19,7 @@
 a {
   color: rgb(100, 92, 92);
   text-decoration: none;
-  font-size: 1.7em;
+  font-size: 1em;
   font-family: "Red Hat Display", sans-serif;
 
   font-weight: 100;
@@ -31,8 +31,8 @@ a:hover {
   transition: all 0.2s;
 }
 .navbarLinks {
-  padding-right: 3vh;
-
+  padding: 7vh;
+  font-size: 1.2em;
   position: relative;
   top: -10px;
 }
@@ -47,6 +47,7 @@ nav {
 
 .name {
   font-family: "Yeseva One", cursive;
+  font-size: 1.9em;
   padding-right: 3vh;
   position: relative;
   top: -10px;
