--- a/src/components/Projects/projectCard.module.css
+++ b/src/components/Projects/projectCard.module.css
@@ -1,7 +1,15 @@
+@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@300&family=Rozha+One&family=Yeseva+One&display=swap");
+
 .container {
   position: relative;
   margin: 40px;
-  padding: 40px;
+
+  background-color: #fafafa;
+  width: 55vw;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+  display: flex;
+  justify-content: flex-end;
 
   /* width: 100%;
   height: 100%;
@@ -10,14 +18,9 @@
 }
 
 .image {
-  width: 600px;
-  height: 40vh;
-
-  background-color: rgb(17, 17, 17);
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
-    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+  width: 65vh;
+  height: 45vh;
   position: relative;
-  object-fit: cover;
 }
 /* 
 .image:hover {
@@ -25,18 +28,17 @@
   transition: all 0.4s;
 } */
 
-
 .description {
   position: absolute;
+  font-family: "Red Hat Display", sans-serif;
+  width: 35%;
+  left: 1vh;
+  margin-left: 2vh;
 }
 
 .title {
   position: relative;
+  font-family: "Red Hat Display", sans-serif;
   color: rgb(0, 0, 0);
-  top: 0;
-  z-index: 1;
-  font-weight: bold;
-  font-family: sans-serif;
-  font-size: 2em;
-  margin-bottom: 1vh;
+  font-size: 1.2em;
 }
