--- a/src/components/Projects/projects.module.css
+++ b/src/components/Projects/projects.module.css
@@ -1,15 +1,14 @@
-
-@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,800;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@300&family=Rozha+One&family=Yeseva+One&display=swap");
 
 .container {
   margin-top: 0;
   padding-top: 0;
-  background-color: #f4f3ef;
+  background-color: #f0dbd0;
 }
 
 .flexContainer {
   position: relative;
-  background-color: #f4f3ef;
+  background-color: #f0dbd0;
 
   color: black;
   display: flex;
@@ -18,10 +17,10 @@
 }
 
 .heading {
-
-  font-size: 2em;
-  margin: 10vh;
-  font-family: "Playfair Display", serif;
+  font-size: 1.7em;
+  margin-top: 15vh;
+  margin-left: 15vh;
+  font-family: "Red Hat Display", sans-serif;
   color: rgb(85, 79, 79);
 
   position: relative;
