--- a/src/components/Projects/projectCard.module.css
+++ b/src/components/Projects/projectCard.module.css
@@ -10,6 +10,7 @@
     rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
   display: flex;
   justify-content: flex-end;
+  border-radius: 2px;
 
   /* width: 100%;
   height: 100%;
@@ -21,6 +22,7 @@
   width: 65vh;
   height: 45vh;
   position: relative;
+  border-radius: 2px;
 }
 /* 
 .image:hover {
