--- a/src/components/Skills/skills.module.css
+++ b/src/components/Skills/skills.module.css
@@ -1,13 +1,9 @@
-/* body {
-  margin: 0;
-  height: 100%;
-} */
+@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@400;500&display=swap");
 
 .container {
   position: relative;
 
-
-  background-color: #f4f3ef;
+  background-color: white;
 
   width: 100%;
   height: 100vh;
@@ -17,17 +13,50 @@
 }
 
 .heading {
-  color: white;
-  font-size: 3vh;
-  margin: 6vh;
-  color: #93a9ff;
-  font-family: sans-serif;
-  font-weight: 500;
-  letter-spacing: 0.1em;
+  font-size: 1.7em;
+  position: absolute;
+  font-family: "Yeseva One", cursive;
+  color: rgb(85, 79, 79);
+  z-index: 2;
+  top: 0;
+  left: 15vh;
+}
+.bottomBox {
+  background-color: #5d5c58;
+  width: 100%;
+  height: 50%;
+  position: absolute;
+  bottom: 0;
 }
 
-.description {
-  border: #93a9ff solid 1px;
-  height: 30%;
-  width: 30%;
+.whiteOverlay {
+  background-color: rgb(255, 255, 255);
+  height: 70%;
+  width: 80%;
+  z-index: 2;
+  display: flex;
+  justify-content: space-around;
+  border-radius: 2px;
+}
+
+.verticalLine {
+  border-left: 1.5px solid #000;
+  height: 60%;
+  align-self: center;
+}
+
+.title {
+  font-family: "Yeseva One", cursive;
+  font-weight: 400;
+  font-size: 1.5rem;
+  text-align: center;
+  color: rgb(85, 79, 79);
+}
+.list {
+  font-family: "Red Hat Display", sans-serif;
+  color: rgb(85, 79, 79);
+  font-weight: 200;
+  font-size: 1rem;
+  text-align: left;
+  line-height: 1.8em;
 }
