--- a/src/components/Contact/contact.module.css
+++ b/src/components/Contact/contact.module.css
@@ -5,8 +5,8 @@
   width: 100%;
   height: 100vh;
   display: inline-flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: flex-start;
+  align-items: flex-start;
 }
 
 .heading {
@@ -15,36 +15,56 @@
   font-family: "Yeseva One", cursive;
   color: rgb(85, 79, 79);
   z-index: 2;
-  top: 0;
+  top: 8vh;
   left: 15vh;
 }
 
 .formContainer {
-  margin-top: 50px;
-  width: 50%;
-}
-
-.row {
-  margin: 25px 85px 75px 100px;
-}
-
-.contactForm {
-  padding: 10px;
-  width: 90%;
-  max-width: 400px;
-  margin: 30px auto;
-  border-radius: 10px;
+  margin-top: 20vh;
+  width: 20%;
+  height: 50%;
   display: flex;
-  flex-direction: column;
-  gap: 20px;
+  margin-left: 20vh;
 }
-.contactForm input,
-button,
-textarea {
-  height: 50px;
-  padding-left: 5px;
-  font-size: 18px;
+
+.label {
+  font-size: 1.5em;
 }
-.contactForm textarea {
-  height: 100px;
+
+.input {
+  margin-bottom: 5vh;
+}
+
+.textarea {
+  resize: none;
+}
+
+button {
+  display: inline-block;
+  padding: 10px;
+  width: 20vh;
+  border: none;
+  margin: 0 0.3em 0.3em 0;
+
+  box-sizing: border-box;
+  text-decoration: none;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 1em;
+  background-color: #c89a8e;
+  color: white;
+  text-align: center;
+  transition: all 0.2s;
+  border-radius: 10px;
+  position: absolute;
+  left: 20vh;
+  bottom: -5vh;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  margin-bottom: 8vh;
+}
+
+button:hover {
+  background-color: rgb(173, 128, 119);
+  color: white;
+  cursor: pointer;
 }
