--- a/src/components/Home/home.module.css
+++ b/src/components/Home/home.module.css
@@ -22,7 +22,7 @@
 .img {
   position: absolute;
   height: 50vh;
-  right: 40vh;
+  right: 30vh;
   top: 30vh;
 }
 
@@ -43,19 +43,20 @@
   top: 28vh;
   font-size: 1.3em;
   font-family: "Red Hat Display", sans-serif;
+  font-weight: 200;
   position: absolute;
 }
 
 .description {
   position: absolute;
-  top: 33vh;
+  top: 35vh;
   left: 30vh;
-  color: rgb(0, 0, 0);
   padding-top: 4vh;
   min-width: 30vw;
   max-width: 10vw;
   font-size: 1.3em;
   font-family: "Red Hat Display", sans-serif;
+  font-weight: 200;
   height: 25vh;
   border-radius: 10px;
 }
