--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -5,7 +5,7 @@
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  top: 5vh;
+  top: 7vh;
   width: 100%;
   height: 8vh;
   padding: 2vh;
@@ -15,42 +15,31 @@
 
   /* border-bottom: white 0.8px solid; */
 }
-
 .link {
   color: rgb(100, 92, 92);
-  text-decoration: none;
-  font-size: 1em;
+  font-size: 1.1em;
   font-family: "Red Hat Display", sans-serif;
-
   font-weight: 100;
   padding: 2vh;
 }
 
 .link:hover {
-  color: #c89a8e;
-  transition: all 0.2s;
+  color: pink;
+  cursor: pointer;
 }
 .navbarLinks {
   padding: 7vh;
-  font-size: 1.2em;
   position: relative;
   top: -10px;
-}
-
-.socialIcon {
-  font-size: 5ch;
-}
-
-nav {
-  padding-right: 10px;
 }
 
 .name {
   font-family: "Yeseva One", cursive;
-  font-size: 1.9em;
+  font-size: 2em;
   padding-right: 3vh;
   position: relative;
-  top: -10px;
-
+  font-weight: 100;
+  padding: 7vh;
   color: rgb(100, 92, 92);
+  margin-top: 3vh;
 }
