--- a/src/components/Contact/contact.module.css
+++ b/src/components/Contact/contact.module.css
@@ -1,12 +1,10 @@
 .container {
   position: relative;
-
   background-color: white;
   width: 100%;
   height: 100vh;
   display: inline-flex;
   justify-content: flex-start;
-  align-items: flex-start;
 }
 
 .heading {
@@ -23,31 +21,32 @@
   margin-top: 20vh;
   width: 20%;
   height: 50%;
+  margin-left: 5vh;
   display: flex;
-  margin-left: 20vh;
 }
 
 .label {
-  font-size: 1.5em;
+  font-size: 1em;
 }
 
 .input {
   margin-bottom: 5vh;
+  border-top: none;
+  border-right: none;
+  border-left: none;
 }
 
 .textarea {
   resize: none;
 }
 
-button {
+.submitButton {
   display: inline-block;
   padding: 10px;
-  width: 20vh;
+  width: auto;
   border: none;
   margin: 0 0.3em 0.3em 0;
 
-  box-sizing: border-box;
-  text-decoration: none;
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 1em;
@@ -56,15 +55,39 @@ button {
   text-align: center;
   transition: all 0.2s;
   border-radius: 10px;
-  position: absolute;
-  left: 20vh;
-  bottom: -5vh;
+  margin-top: 2vh;
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
   margin-bottom: 8vh;
 }
 
-button:hover {
+.sumbitButton:hover {
   background-color: rgb(173, 128, 119);
   color: white;
   cursor: pointer;
+}
+
+.wave {
+  position: absolute;
+  top: -8vh;
+  width: 100%;
+}
+
+.followButton {
+  height: 10vh;
+  position: relative;
+  top: 80vh;
+  margin: 0 0.3em 0.3em 0;
+  border: 1.5px solid rgb(0, 0, 0);
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 1em;
+  background-color: white;
+  color: rgb(0, 0, 0);
+  text-align: center;
+  transition: all 0.2s;
+  border-radius: 10px;
+  margin-top: 2vh;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  left: -7vh;
+  margin: 2vh;
 }
