--- a/src/components/Skills/skills.module.css
+++ b/src/components/Skills/skills.module.css
@@ -6,7 +6,7 @@
   background-color: white;
 
   width: 100%;
-  height: 100vh;
+  height: 50vh;
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -32,7 +32,7 @@
 .whiteOverlay {
   background-color: rgb(255, 255, 255);
   height: 70%;
-  width: 80%;
+  width: 95%;
   z-index: 2;
   display: flex;
   justify-content: space-around;
@@ -43,12 +43,13 @@
   border-left: 1.5px solid #000;
   height: 60%;
   align-self: center;
+  margin: 0 auto;
 }
 
 .title {
   font-family: "Yeseva One", cursive;
   font-weight: 400;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   text-align: center;
   color: rgb(85, 79, 79);
 }
@@ -59,4 +60,8 @@
   font-size: 1rem;
   text-align: left;
   line-height: 1.8em;
+}
+
+li {
+  padding-right: 2vh;
 }
