--- a/src/components/Home/home.module.css
+++ b/src/components/Home/home.module.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@300&family=Rozha+One&family=Yeseva+One&display=swap");
 
+html {
+  scroll-behavior: smooth;
+}
+
 .homeContainer {
   /* background-color: black;
   font-family: "Open Sans", sans-serif;
@@ -10,7 +14,7 @@
   background-color: #f4f3ef;
 
   width: 100%;
-  height: 100vh;
+  height: 80vh;
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -21,68 +25,77 @@
 
 .img {
   position: absolute;
-  height: 50vh;
-  right: 30vh;
-  top: 30vh;
+  height: 20%;
+  width: auto;
+  margin: 0 auto;
+  top: 8vh;
+}
+
+.intro {
+  width: 65%;
+  margin: 0 auto;
+  padding-top: 8vh;
 }
 
 .name {
-  position: absolute;
+  /* position: absolute; */
   font-family: "Yeseva One", cursive;
   font-size: 1.6em;
-  color: black;
-  left: 30vh;
-  top: 33vh;
-  width: 80vh;
+  /* color: black; */
+  /* left: 30vh; */
+  /* top: 33vh; */
+  /* width: 80vh;
   display: block;
-  z-index: 2;
+  z-index: 2; */
 }
 
 .hi {
-  left: 30vh;
-  top: 28vh;
+  /* left: 30vh; */
+  /* top: 28vh; */
   font-size: 1.3em;
   font-family: "Red Hat Display", sans-serif;
   font-weight: 200;
-  position: absolute;
+  /* position: absolute; */
 }
 
 .description {
-  position: absolute;
-  top: 35vh;
-  left: 30vh;
-  padding-top: 4vh;
+  /* position: absolute; */
+  /* top: 35vh;
+  left: 30vh; */
+  /* padding-top: 4vh;
   min-width: 30vw;
-  max-width: 10vw;
+  max-width: 10vw; */
   font-size: 1.3em;
   font-family: "Red Hat Display", sans-serif;
   font-weight: 200;
-  height: 25vh;
-  border-radius: 10px;
+  /* height: 25vh;
+  border-radius: 10px; */
 }
 
-.projectsButton {
-  display: inline-block;
-  padding: 15px;
-  width: auto;
-  border: none;
-  margin: 0 0.3em 0.3em 0;
+.buttons {
+  position: absolute;
+  top: 77vh;
+  margin: 0 auto;
+}
 
-  box-sizing: border-box;
-  text-decoration: none;
-  font-family: "Roboto", sans-serif;
-  font-weight: 500;
+.buttons > a {
+  display: inline;
+  width: auto;
+  padding: 15px;
+  margin: 0 0.3em 0.3em 0;
+  font-family: "Red Hat Display", sans-serif;
+  font-weight: 300;
   font-size: 1em;
-  background-color: #c89a8e;
-  color: white;
   text-align: center;
   transition: all 0.2s;
   border-radius: 10px;
-  position: absolute;
-  left: 30vh;
-  bottom: 5vh;
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
-  margin-bottom: 8vh;
+  margin-left: 1vh;
+  margin-right: 1vh;
+}
+
+.projectsButton {
+  background-color: #c89a8e;
 }
 
 .projectsButton:hover {
@@ -91,28 +104,15 @@
   cursor: pointer;
 }
 
+.projectsButton:visited {
+  color: rgba(0, 0, 0, 0.19);
+}
+
 .downloadButton {
-  display: inline-block;
-  padding: 15px;
-  width: auto;
   border: solid 1px #c89a8e;
-  margin: 0 0.3em 0.3em 0;
-  border-radius: 3px;
-  box-sizing: border-box;
-  text-decoration: none;
-  font-family: "Roboto", sans-serif;
-  font-weight: 500;
-  font-size: 1em;
+
   background-color: #ffffff;
   color: rgb(100, 92, 92);
-  text-align: center;
-  transition: all 0.2s;
-  border-radius: 10px;
-  position: absolute;
-  left: 55vh;
-  bottom: 5vh;
-  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
-  margin-bottom: 8vh;
 }
 
 .downloadButton:hover {
@@ -120,12 +120,16 @@
   background-color: #ededed;
 }
 
-.wave {
-  position: absolute;
-  bottom: -22vh;
-  width: 100%;
+.downloadButton:visited {
+  color: rgb(100, 92, 92);
 }
 
+.wave {
+  position: absolute;
+  bottom: -16vh;
+  width: 100%;
+}
+/* 
 @media screen and (max-width: 1070px) {
   .img {
     height: 30vh;
@@ -137,4 +141,4 @@
     font-size: 0.8em;
     padding: 1.5vh;
   }
-}
+} */
