--- a/src/components/Projects/projectCard.module.css
+++ b/src/components/Projects/projectCard.module.css
@@ -2,10 +2,9 @@
 
 .container {
   position: relative;
-  margin: 40px;
-
+  margin: 2vh;
   background-color: #fafafa;
-  width: 55vw;
+
   box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
     rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
   display: flex;
@@ -19,8 +18,8 @@
 }
 
 .image {
-  width: 65vh;
-  height: 45vh;
+  width: 70%;
+  height: 100%;
   position: relative;
   border-radius: 2px;
 }
@@ -31,16 +30,18 @@
 } */
 
 .description {
-  position: absolute;
+  position: relative;
   font-family: "Red Hat Display", sans-serif;
   width: 35%;
   left: 1vh;
-  margin-left: 2vh;
+  padding: 1vh;
+  font-size: 0.9em;
+  overflow: scroll;
 }
 
 .title {
   position: relative;
   font-family: "Red Hat Display", sans-serif;
   color: rgb(0, 0, 0);
-  font-size: 1.2em;
+  font-size: 1em;
 }
