--- a/src/components/Projects/projects.module.css
+++ b/src/components/Projects/projects.module.css
@@ -14,12 +14,14 @@
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
+  align-content: center;
 }
 
 .heading {
   font-size: 1.7em;
   margin-top: 15vh;
-  margin-left: 15vh;
+  text-align: left;
+  margin-left: 2vh;
   font-family: "Yeseva One", cursive;
   color: rgb(85, 79, 79);
 
