--- a/src/components/TopNav/topnav.module.css
+++ b/src/components/TopNav/topnav.module.css
@@ -1,7 +1,7 @@
 .socialIcon {
   font-size: 3ch;
   color: white;
-  margin: 1vh;
+  margin: 0.8vh;
 }
 .socialIcon:hover {
   color: #a96b6b;
@@ -12,7 +12,8 @@
   justify-content: flex-start;
   align-items: center;
   width: 100%;
-  height: 7vh;
+  /* height: 7vh; */
+  height: 5vh;
   margin: 0;
   position: fixed;
   z-index: 3;
