--- a/src/components/Contact/contact.module.css
+++ b/src/components/Contact/contact.module.css
@@ -3,7 +3,7 @@
   background-color: white;
   width: 100%;
   height: 100vh;
-  display: inline-flex;
+  display: flex;
   justify-content: flex-start;
 }
 
@@ -11,10 +11,10 @@
   font-size: 1.7em;
   position: absolute;
   font-family: "Yeseva One", cursive;
-  color: rgb(85, 79, 79);
   z-index: 2;
   top: 8vh;
-  left: 15vh;
+  width: 100%;
+  text-align: center;
 }
 
 .formContainer {
@@ -38,11 +38,12 @@
 
 .textarea {
   resize: none;
+  border: solid rgb(60, 60, 60) 1.2px;
 }
 
 .submitButton {
   display: inline-block;
-  padding: 10px;
+  padding: 0.3em 1.2em 0.3em 1.2em;
   width: auto;
   border: none;
   margin: 0 0.3em 0.3em 0;
@@ -50,11 +51,11 @@
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 1em;
-  background-color: #c89a8e;
+  background-color: #ab6c46;
   color: white;
   text-align: center;
   transition: all 0.2s;
-  border-radius: 10px;
+
   margin-top: 2vh;
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
   margin-bottom: 8vh;
@@ -73,21 +74,28 @@
 }
 
 .followButton {
-  height: 10vh;
   position: relative;
-  top: 80vh;
+
   margin: 0 0.3em 0.3em 0;
-  border: 1.5px solid rgb(0, 0, 0);
+  border: none;
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 1em;
   background-color: white;
-  color: rgb(0, 0, 0);
+
   text-align: center;
   transition: all 0.2s;
-  border-radius: 10px;
-  margin-top: 2vh;
-  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
-  left: -7vh;
-  margin: 2vh;
+
+  color: rgb(33, 33, 33);
+  border: #ab6c46 solid 1.5px;
+  width: 50%;
+}
+
+.followContainer {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  bottom: 8vh;
+  width: 100%;
+  align-items: center;
 }
