--- a/src/components/Hamburger/styles.css
+++ b/src/components/Hamburger/styles.css
@@ -1,9 +1,9 @@
 /* Position and sizing of burger button */
 .bm-burger-button {
   position: fixed;
-  width: 3vh;
-  height: 3vh;
-  right: 3vh;
+  width: 2.7vh;
+  height: 2.5vh;
+  right: 2vh;
   top: 1vh;
 }
 
@@ -39,7 +39,7 @@
 
 /* General sidebar styles */
 .bm-menu {
-  background: #515c4e;
+  background: #9fa292;
   padding: 2.5em 1.5em 0;
   font-size: 1.15em;
 }
