--- a/src/components/Home/home.module.css
+++ b/src/components/Home/home.module.css
@@ -11,7 +11,7 @@ html {
   width: 100vh; */
   position: relative;
 
-  background-color: #f4f3ef;
+  background-color: #f0eee6;
 
   width: 100%;
   height: 80vh;
@@ -52,9 +52,10 @@ html {
 .hi {
   /* left: 30vh; */
   /* top: 28vh; */
-  font-size: 1.3em;
+  font-size: 1.2em;
   font-family: "Red Hat Display", sans-serif;
   font-weight: 200;
+  margin-bottom: 0;
   /* position: absolute; */
 }
 
@@ -65,7 +66,7 @@ html {
   /* padding-top: 4vh;
   min-width: 30vw;
   max-width: 10vw; */
-  font-size: 1.3em;
+  font-size: 1.2em;
   font-family: "Red Hat Display", sans-serif;
   font-weight: 200;
   /* height: 25vh;
@@ -74,7 +75,7 @@ html {
 
 .buttons {
   position: absolute;
-  top: 77vh;
+  top: 72vh;
   margin: 0 auto;
 }
 
@@ -85,33 +86,33 @@ html {
   margin: 0 0.3em 0.3em 0;
   font-family: "Red Hat Display", sans-serif;
   font-weight: 300;
-  font-size: 1em;
+  font-size: 0.8em;
   text-align: center;
   transition: all 0.2s;
-  border-radius: 10px;
-  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
-  margin-left: 1vh;
-  margin-right: 1vh;
+  font-weight: 300;
+  box-shadow: rgba(26, 26, 26, 0.19) 0px 10px 20px,
+    rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  margin: 0 2vh 0 2vh;
 }
 
 .projectsButton {
-  background-color: #c89a8e;
+  background-color: #ab6c46;
+  color: white;
 }
 
 .projectsButton:hover {
-  background-color: rgb(173, 128, 119);
+  background-color: #ab6c46;
   color: white;
   cursor: pointer;
 }
 
 .projectsButton:visited {
   color: rgba(0, 0, 0, 0.19);
+  text-decoration: none;
 }
 
 .downloadButton {
-  border: solid 1px #c89a8e;
-
-  background-color: #ffffff;
+  background-color: #d9d1c5;
   color: rgb(100, 92, 92);
 }
 
