--- a/src/components/Projects/projectCard.module.css
+++ b/src/components/Projects/projectCard.module.css
@@ -10,6 +10,8 @@
   display: flex;
   justify-content: flex-end;
   border-radius: 2px;
+  max-width: 90%;
+  max-height: 30%;
 
   /* width: 100%;
   height: 100%;
@@ -35,7 +37,7 @@
   width: 35%;
   left: 1vh;
   padding: 1vh;
-  font-size: 0.9em;
+  font-size: 0.5em;
   overflow: scroll;
 }
 
