--- a/src/components/TopNav/topnav.module.css
+++ b/src/components/TopNav/topnav.module.css
@@ -1,19 +1,19 @@
 .socialIcon {
-  font-size: 3ch;
+  font-size: 2.5ch;
   color: white;
   margin: 0.8vh;
 }
 .socialIcon:hover {
-  color: #a96b6b;
+  color: white;
 }
 .container {
-  background-color: #515c4e;
+  background-color: #9fa292;
   display: inline-flex;
   justify-content: flex-start;
   align-items: center;
   width: 100%;
   /* height: 7vh; */
-  height: 5vh;
+  height: 4.5vh;
   margin: 0;
   position: fixed;
   z-index: 3;
