--- a/src/components/Contact/contact.module.css
+++ b/src/components/Contact/contact.module.css
@@ -94,8 +94,10 @@
 .followContainer {
   display: flex;
   flex-direction: column;
-  position: absolute;
+  position: relative;
   bottom: 8vh;
-  width: 100%;
+  left: -1vh;
+  width: 50%;
+  justify-content: flex-end;
   align-items: center;
 }
