--- a/src/components/Projects/projectCard.module.css
+++ b/src/components/Projects/projectCard.module.css
@@ -11,7 +11,7 @@
   justify-content: flex-end;
   border-radius: 2px;
   max-width: 90%;
-  max-height: 30%;
+  max-width: 90%;
 
   /* width: 100%;
   height: 100%;
