--- a/src/components/Contact/contact.module.css
+++ b/src/components/Contact/contact.module.css
@@ -83,13 +83,13 @@
   font-weight: 500;
   font-size: 0.6em;
   background-color: white;
-
+  padding: 0.5vh;
   text-align: center;
   transition: all 0.2s;
 
   color: rgb(33, 33, 33);
   border: #ab6c46 solid 1.5px;
-  width: 50%;
+  width: 60%;
 }
 
 .followContainer {
@@ -97,7 +97,7 @@
   flex-direction: column;
   position: absolute;
   bottom: 2vh;
-  left: -1vh;
+  margin: 11vh;
   width: 50%;
   justify-content: flex-end;
   align-items: center;
