--- a/src/components/Contact/contact.module.css
+++ b/src/components/Contact/contact.module.css
@@ -1,7 +1,3 @@
-body {
-  position: absolute;
-}
-
 .container {
   position: relative;
   background-color: white;
@@ -105,22 +101,15 @@ body {
 
   color: rgb(33, 33, 33);
   border: #ab6c46 solid 1.5px;
-  width: 60%;
+  width: 12vh;
 }
 
 .followContainer {
   display: flex;
   flex-direction: column;
-  position: absolute;
-  bottom: 2vh;
-  margin: 11vh;
-  width: 50%;
-  justify-content: flex-end;
-  align-items: center;
-}
-
-.hideButton {
-  height: 10px;
-  align-self: flex-end;
-  padding: 5vh;
+  position: sticky;
+  justify-content: center;
+  align-items: flex-end;
+  margin-top: 70vh;
+  margin-left: 2vh;
 }
