--- a/src/components/Contact/contact.module.css
+++ b/src/components/Contact/contact.module.css
@@ -4,7 +4,7 @@
   width: 100%;
   height: 100vh;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
 }
 
 .heading {
@@ -22,7 +22,7 @@
   width: 20%;
   height: 50%;
   position: relative;
-  left: 13vh;
+  left: -6.5vh;
 }
 
 .label {
@@ -108,5 +108,4 @@
   flex-direction: column;
   position: absolute;
   top: 15vh;
-  left: 17vh;
 }
