--- a/src/components/Home/home.module.css
+++ b/src/components/Home/home.module.css
@@ -32,9 +32,33 @@ html {
 }
 
 .intro {
-  width: 65%;
+  width: 60%;
   margin: 0 auto;
   padding-top: 8vh;
+}
+
+.intro:after {
+  display: block;
+  content: "";
+  width: 20%;
+  height: 30%;
+  position: absolute;
+  top: 20px;
+  right: -10px;
+  border-top: 1px solid rgb(38, 38, 38);
+  border-right: 1px solid rgb(0, 0, 0);
+}
+
+.intro:before {
+  display: block;
+  content: "";
+  width: 20%;
+  height: 30%;
+  position: absolute;
+  bottom: -40px;
+  left: -50px;
+  border-bottom: 1px solid rgb(87, 87, 87);
+  border-left: 1px solid rgb(96, 96, 96);
 }
 
 .name {
@@ -76,7 +100,7 @@ html {
 
 .buttons {
   position: absolute;
-  top: 72vh;
+  top: 65vh;
   margin: 0 auto;
 }
 
@@ -108,7 +132,6 @@ html {
 }
 
 .projectsButton:visited {
-  color: rgba(0, 0, 0, 0.19);
   text-decoration: none;
 }
 
@@ -144,3 +167,60 @@ html {
     padding: 1.5vh;
   }
 } */
+
+@media screen and (min-width: 800px) {
+  .img {
+    position: absolute;
+    height: 50%;
+    width: auto;
+    margin: 0 auto;
+    top: 28vh;
+    right: 10vh;
+  }
+  .intro {
+    position: relative;
+    width: 40%;
+    padding-top: 8vh;
+    left: -25vh;
+  }
+
+  .wave {
+    position: absolute;
+    bottom: -16vh;
+    width: 100%;
+  }
+
+  .homeContainer {
+    /* background-color: black;
+  font-family: "Open Sans", sans-serif;
+  color: white;
+  width: 100vh; */
+    position: relative;
+
+    background-color: #f0eee6;
+
+    width: 100%;
+    height: 100vh;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+
+    padding-bottom: 0;
+    margin-bottom: 0;
+  }
+  .buttons {
+    position: absolute;
+    top: 80vh;
+    left: 20%;
+    width: 40%;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .intro:after {
+    display: none;
+  }
+  .intro:before {
+    display: none;
+  }
+}
