--- a/src/components/Projects/projectCard.module.css
+++ b/src/components/Projects/projectCard.module.css
@@ -2,7 +2,7 @@
 
 .container {
   position: relative;
-  margin: 2vh;
+  margin: 5vh;
   background-color: #fafafa;
 
   box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
@@ -11,12 +11,17 @@
   justify-content: flex-end;
   border-radius: 2px;
   max-width: 90%;
-  max-width: 90%;
-
+  width: 90vw;
+  max-width: 500px;
+  transition: all 0.2s ease-in-out;
   /* width: 100%;
   height: 100%;
   padding: 0;
   margin: 0; */
+}
+
+.container:hover {
+  transform: scale(1.1);
 }
 
 .image {
