--- a/src/components/TopNav/topnav.module.css
+++ b/src/components/TopNav/topnav.module.css
@@ -1,7 +1,10 @@
 .socialIcon {
-  font-size: 2.5ch;
+  font-size: 2ch;
   color: white;
-  margin: 0.8vh;
+  margin: 0.5vh;
+  margin-top: 0;
+
+  max-height: 4ch;
 }
 .socialIcon:hover {
   color: white;
@@ -12,9 +15,11 @@
   justify-content: flex-start;
   align-items: center;
   width: 100%;
-  /* height: 7vh; */
   height: 4.5vh;
+  /* height: 7vh; */
+
   margin: 0;
   position: fixed;
   z-index: 3;
+  box-shadow: 0px 1px 10px #999;
 }
