--- a/src/components/Contact/contact.module.css
+++ b/src/components/Contact/contact.module.css
@@ -80,11 +80,11 @@
   cursor: pointer;
 }
 
-.wave {
+/* .wave {
   position: absolute;
-  top: -12vh;
+  top: -10vh;
   width: 100%;
-}
+} */
 
 .followButton {
   position: relative;
@@ -108,4 +108,10 @@
   flex-direction: column;
   position: absolute;
   top: 15vh;
+}
+
+@media screen and (min-width: 1060px) {
+  .formContainer {
+    width: 10vh;
+  }
 }
