--- a/src/components/Home/home.module.css
+++ b/src/components/Home/home.module.css
@@ -44,7 +44,7 @@ html {
   height: 30%;
   position: absolute;
   top: 20px;
-  right: -10px;
+  right: -30px;
   border-top: 1px solid rgb(38, 38, 38);
   border-right: 1px solid rgb(0, 0, 0);
 }
@@ -55,14 +55,13 @@ html {
   width: 20%;
   height: 30%;
   position: absolute;
-  bottom: -40px;
+  bottom: -20px;
   left: -50px;
   border-bottom: 1px solid rgb(87, 87, 87);
   border-left: 1px solid rgb(96, 96, 96);
 }
 
 .name {
-  /* position: absolute; */
   font-family: "Yeseva One", cursive;
   font-size: 1.4em;
   margin-bottom: 0;
@@ -81,11 +80,9 @@ html {
   font-family: "Red Hat Display", sans-serif;
   font-weight: 200;
   margin-bottom: 0;
-  /* position: absolute; */
 }
 
 .description {
-  /* position: absolute; */
   /* top: 35vh;
   left: 30vh; */
   /* padding-top: 4vh;
@@ -211,7 +208,7 @@ html {
   .buttons {
     position: absolute;
     top: 80vh;
-    left: 20%;
+    left: 10%;
     width: 40%;
   }
 }
@@ -222,5 +219,27 @@ html {
   }
   .intro:before {
     display: none;
+  }
+}
+
+@media (min-width: 0px) and (max-width: 300px) {
+  .img {
+    height: 5vh;
+  }
+
+  .buttons {
+    font-size: 0.7em;
+  }
+}
+
+@media (max-width: 290px) {
+  .buttons {
+    visibility: hidden;
+  }
+}
+
+@media (max-width: 186px) {
+  .img {
+    visibility: hidden;
   }
 }
