--- a/src/components/Skills/skills.module.css
+++ b/src/components/Skills/skills.module.css
@@ -6,7 +6,7 @@
   background-color: white;
 
   width: 100%;
-  height: 70vh;
+  height: 80vh;
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -31,7 +31,7 @@
 
 .whiteOverlay {
   background-color: rgb(255, 255, 255);
-  height: 70%;
+  height: 50%;
   width: 95%;
   z-index: 2;
   display: flex;
@@ -67,4 +67,58 @@
 
 li {
   padding-right: 2vh;
+}
+
+.wave {
+  position: absolute;
+  bottom: -2vh;
+  margin-top: 10vh;
+}
+
+@media screen and (min-width: 400px) {
+  .whiteOverlay {
+    height: 60%;
+  }
+}
+
+@media screen and (min-width: 430px) {
+  .container {
+    height: 110vh;
+  }
+  .whiteOverlay {
+    margin: 15vh;
+    height: 65%;
+  }
+  .title {
+    font-size: 1em;
+  }
+  .list {
+    font-size: 1em;
+  }
+}
+
+@media screen and (min-width: 600px) {
+  .container {
+    height: 120vh;
+  }
+  .whiteOverlay {
+    margin: 15vh;
+    height: 65%;
+  }
+}
+
+@media screen and (min-width: 830px) {
+  .container {
+    height: 120vh;
+  }
+  .whiteOverlay {
+    margin: 15vh;
+    height: 50%;
+  }
+}
+
+@media (min-width: 0px) and (max-width: 300px) {
+  .whiteOverlay {
+    overflow-x: scroll;
+  }
 }
