--- a/src/components/Projects/projectCard.module.css
+++ b/src/components/Projects/projectCard.module.css
@@ -94,10 +94,16 @@
 
 @media (min-width: 0px) and (max-width: 300px) {
   .container {
-    overflow-x: scroll;
+    overflow: scroll;
   }
   .image {
     min-width: 50%;
     height: auto;
+  }
+  .title {
+    font-size: 0.9em;
+  }
+  .description {
+    font-size: 0.5em;
   }
 }
