title font increase

--- a/src/app.css
+++ b/src/app.css
@@ -12,8 +12,8 @@ body {
   overflow-x: hidden;
 }
 
-@media (max-width: 300px) {
+/* @media (max-width: 300px) {
   body {
     overflow-x: auto;
   }
-}
+} */
