--- a/src/components/Projects/projectCard.module.css
+++ b/src/components/Projects/projectCard.module.css
@@ -56,11 +56,12 @@
   text-align: center;
   font-family: "Red Hat Display", sans-serif;
   color: rgb(0, 0, 0);
-  font-size: 1em;
+  font-size: 1.1em;
 }
 
 .technologies {
   padding: 0;
+  padding-right: 1px;
   margin-top: -2vh;
 }
 .codeButton {
