--- a/src/components/Home/home.module.css
+++ b/src/components/Home/home.module.css
@@ -259,3 +259,11 @@ html {
     font-size: 0.5em;
   }
 }
+
+@media (min-width: 1000px) {
+  @media (max-height: 520px) {
+    .wave {
+      display: none;
+    }
+  }
+}
