--- a/src/components/TopNav/topnav.module.css
+++ b/src/components/TopNav/topnav.module.css
@@ -23,3 +23,11 @@
   z-index: 3;
   box-shadow: 0px 1px 10px #999;
 }
+
+@media (min-width: 1000px) {
+  @media (max-height: 520px) {
+    .socialIcon {
+      font-size: 4vh;
+    }
+  }
+}
