--- a/src/components/Projects/projectCard.module.css
+++ b/src/components/Projects/projectCard.module.css
@@ -118,3 +118,12 @@
     left: 0vh;
   }
 }
+
+@media screen and (min-width: 700px) {
+  /* .title {
+    font-size: 1.5em;
+  } */
+  .description {
+    font-size: 0.65rem;
+  }
+}
