--- a/src/components/Projects/projectCard.module.css
+++ b/src/components/Projects/projectCard.module.css
@@ -57,6 +57,7 @@
   font-family: "Red Hat Display", sans-serif;
   color: rgb(0, 0, 0);
   font-size: 1.1em;
+  margin-left: -2.5vh;
 }
 
 .technologies {
