--- a/src/components/Contact/contact.module.css
+++ b/src/components/Contact/contact.module.css
@@ -140,3 +140,15 @@
     visibility: visible;
   }
 }
+
+@media (max-width: 1000px) and (max-height: 465px) {
+  .container {
+    height: 200vh;
+  }
+}
+
+@media (min-width: 1180px) and (min-height: 730px) {
+  .formContainer {
+    width: 10%;
+  }
+}
