--- a/src/components/Home/home.module.css
+++ b/src/components/Home/home.module.css
@@ -99,6 +99,7 @@ html {
   position: absolute;
   top: 65vh;
   margin: 0 auto;
+  z-index: 2;
 }
 
 .buttons > a {
@@ -265,5 +266,45 @@ html {
     .wave {
       display: none;
     }
+  }
+}
+
+@media (min-width: 980px) {
+  .buttons {
+    z-index: 5;
+  }
+}
+
+@media (max-width: 540px) and (max-height: 450px) {
+  .buttons {
+    font-size: 0.5em;
+    z-index: 2;
+  }
+  .buttons > a {
+    padding: 5px;
+  }
+  .img {
+    display: none;
+  }
+  .intro {
+    font-size: 0.5em;
+  }
+}
+
+@media (max-height: 315px) and (min-width: 530px) {
+  .intro {
+    font-size: 0.7em;
+  }
+
+  .buttons > a {
+    padding: 5px;
+  }
+  .buttons {
+    font-size: 0.6em;
+
+    text-align: center;
+  }
+  .wave {
+    display: none;
   }
 }
