--- a/src/components/Skills/skills.module.css
+++ b/src/components/Skills/skills.module.css
@@ -139,3 +139,13 @@ li {
     font-size: 1.6em;
   }
 }
+
+@media (max-width: 1000px) and (max-height: 465px) {
+  .whiteOverlay {
+    overflow: scroll;
+    height: 50%;
+  }
+  .container {
+    height: 300vh;
+  }
+}
