--- a/src/components/Hamburger/styles.css
+++ b/src/components/Hamburger/styles.css
@@ -39,14 +39,14 @@
 
 /* General sidebar styles */
 .bm-menu {
-  background: #9fa292;
+  background: #515443;
   padding: 2.5em 1.5em 0;
   font-size: 1.15em;
 }
 
 /* Morph shape necessary with bubble or elastic */
 .bm-morph-shape {
-  fill: #515c4e;
+  fill: #515443;
 }
 
 /* Wrapper for item list */
