--- a/src/components/TopNav/topnav.module.css
+++ b/src/components/TopNav/topnav.module.css
@@ -11,12 +11,12 @@
   transition: all ease 0.5s;
 }
 .container {
-  background-color: #9fa292;
+  background-color: #515443;
   display: inline-flex;
   justify-content: flex-start;
   align-items: center;
   width: 100%;
-  height: 4.5vh;
+  height: 4vh;
   /* height: 7vh; */
 
   margin: 0;
