--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -1,11 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@300&family=Rozha+One&family=Yeseva+One&display=swap");
 
 .navbarContainer {
-  background-color: #f0eee6;
+  background-color: white;
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  top: 1vh;
+  /* top: 1vh; */
   width: 100%;
   height: 10vh;
   padding: 2vh;
@@ -67,7 +67,7 @@
 
 @media screen and (min-width: 800px) {
   .navbarContainer {
-    top: 3.5vh;
+    /* top: 3.5vh; */
   }
 }
 
