--- a/src/components/Hamburger/styles.css
+++ b/src/components/Hamburger/styles.css
@@ -4,17 +4,17 @@
   width: 2.7vh;
   height: 2.5vh;
   right: 2vh;
-  top: 1vh;
+  top: 1.5vh;
 }
 
 /* Color/shape of burger icon bars */
 .bm-burger-bars {
-  background: #ffffff;
+  background: #ab6c46;
 }
 
 /* Color/shape of burger icon bars on hover*/
 .bm-burger-bars-hover {
-  background: #ffffff;
+  background: #ab6c46;
 }
 
 /* Position and sizing of clickable cross button */
@@ -25,7 +25,7 @@
 
 /* Color/shape of close button cross */
 .bm-cross {
-  background: #bdc3c7;
+  background: #ab6c46;
 }
 
 /*
@@ -39,14 +39,14 @@
 
 /* General sidebar styles */
 .bm-menu {
-  background: #515443;
+  background: #ede9e0;
   padding: 2.5em 1.5em 0;
   font-size: 1.15em;
 }
 
 /* Morph shape necessary with bubble or elastic */
 .bm-morph-shape {
-  fill: #515443;
+  fill: #ede9e0;
 }
 
 /* Wrapper for item list */
@@ -68,7 +68,7 @@
 .bm-item {
   display: inline-block;
 
-  color: #f2f2f2;
+  color: black;
   margin-bottom: 10px;
   text-align: left;
   text-decoration: none;
