--- a/src/components/Home/home.module.css
+++ b/src/components/Home/home.module.css
@@ -360,11 +360,7 @@
 
 /* new CSS */
 
-@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@300&family=Rozha+One&family=Yeseva+One&display=swap");
-
-html {
-  scroll-behavior: smooth;
-}
+@import url("https://fonts.googleapis.com/css2?family=Noto+Serif+Display:wght@700&family=Red+Hat+Display:wght@400;500&display=swap");
 
 .homeContainer {
   height: 100%;
@@ -382,8 +378,14 @@ html {
   margin-top: -10vh;
   margin-right: 5vh;
   color: #4a130e;
+  font-family: "Red Hat Display", sans-serif;
+  font-weight: 300;
 }
 
+.name {
+  font-family: "Noto Serif Display", serif;
+  font-size: 1.8em;
+}
 .overlay {
   background-image: url("/src/images/background.png");
   background-repeat: no-repeat;
@@ -397,7 +399,7 @@ html {
 }
 
 .img {
-  height: 55vh;
+  height: 50vh;
   margin-top: -10vh;
   margin-left: 10vh;
 }
@@ -451,4 +453,66 @@ html {
 
 .downloadButton:visited {
   color: rgb(100, 92, 92);
+}
+
+@media (max-width: 850px) {
+  .intro {
+    padding-left: 10vh;
+  }
+  .img {
+    padding-right: 8vh;
+    height: 40vh;
+  }
+}
+
+@media (max-width: 800px) {
+  html,
+  body {
+    overflow-x: hidden;
+  }
+  .homeContainer {
+    position: relative;
+
+    width: 100%;
+    height: 80vh;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+
+    padding: 0;
+    margin: 0;
+  }
+  .overlay {
+    background-color: #ede9e0;
+    background-image: url("/src/images/mobilebackground.png");
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  .img {
+    height: 20%;
+    width: auto;
+    position: absolute;
+    top: 9vh;
+    padding: 0;
+    margin: 0;
+  }
+  .intro {
+    width: 70vw;
+    margin: 0 auto;
+    padding: 0;
+    margin: 0;
+    padding-top: 20vh;
+  }
+  .name {
+    font-family: "Yeseva One", cursive;
+    margin-top: -2vh;
+  }
+  .buttons {
+    position: relative;
+    width: 100vw;
+    margin-left: -2vh;
+  }
 }
