--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -3,11 +3,11 @@
 .navbarContainer {
   background-color: white;
   display: inline-flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   /* top: 1vh; */
   width: 100%;
-  height: 10vh;
+  height: 15vh;
   padding: 2vh;
   margin: 0;
   position: fixed;
@@ -16,11 +16,11 @@
   /* border-bottom: white 0.8px solid; */
 }
 .link {
-  color: rgb(46, 46, 46);
+  color: #4a130e;
   font-size: 1.1em;
   font-family: "Red Hat Display", sans-serif;
   font-weight: 100;
-  padding: 2vh;
+  padding: 10vh;
   border-bottom: 1px solid rgba(0, 0, 0, 0);
 
   transition: border-bottom 300ms;
@@ -33,7 +33,7 @@
 }
 
 .navbarLinks {
-  padding: 7vh;
+  padding: 15vh;
   position: relative;
   top: -10px;
 }
@@ -45,8 +45,12 @@
   position: relative;
   font-weight: 100;
   padding: 7vh;
-  color: rgb(46, 46, 46);
+  color: black;
   margin-top: 3vh;
+}
+
+.namelogo {
+  height: 10vh;
 }
 
 @media screen and (max-width: 800px) {
