--- a/src/components/Skills/skills.module.css
+++ b/src/components/Skills/skills.module.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Serif+Display:wght@300;700&family=Red+Hat+Display:wght@400;500&display=swap");
 
 .container {
   position: relative;
@@ -15,14 +15,14 @@
 .heading {
   font-size: 1.3em;
   position: absolute;
-  font-family: "Yeseva One", cursive;
+  font-family: "Noto Serif Display", serif;
   text-align: center;
   z-index: 2;
   top: 0;
   padding: 3vh;
 }
 .bottomBox {
-  background-color: #5d5c58;
+  background-color: #ab6c46;
   width: 100%;
   height: 50%;
   position: absolute;
@@ -31,7 +31,7 @@
 
 .whiteOverlay {
   background-color: rgb(255, 255, 255);
-  height: 50%;
+  height: 70%;
   width: 95%;
   z-index: 2;
   display: flex;
@@ -48,10 +48,10 @@
 }
 
 .title {
-  font-family: "Yeseva One", cursive;
-  font-weight: 400;
-  font-size: 0.8em;
+  font-family: "Noto Serif Display", serif;
 
+  font-weight: 700;
+  font-size: 0.8em;
   text-align: center;
   color: rgb(85, 79, 79);
 }
@@ -63,6 +63,7 @@
   text-align: left;
   line-height: 1.8em;
   margin: 0.8vh;
+  padding-top: 5vh;
 }
 
 li {
@@ -77,7 +78,7 @@ li {
 
 @media screen and (min-width: 400px) {
   .whiteOverlay {
-    height: 60%;
+    height: 65%;
   }
 }
 
@@ -87,7 +88,7 @@ li {
   }
   .whiteOverlay {
     margin: 15vh;
-    height: 65%;
+    height: 70%;
   }
   .title {
     font-size: 1em;
@@ -103,7 +104,7 @@ li {
   }
   .whiteOverlay {
     margin: 15vh;
-    height: 65%;
+    height: 70%;
   }
 }
 
@@ -113,7 +114,7 @@ li {
   }
   .whiteOverlay {
     margin: 15vh;
-    height: 50%;
+    height: 70%;
   }
 }
 
