--- a/src/components/TopNav/topnav.module.css
+++ b/src/components/TopNav/topnav.module.css
@@ -1,28 +1,33 @@
 .socialIcon {
   font-size: 2ch;
-  color: white;
+  color: #ab6c46;
   margin: 0.5vh;
   margin-top: 0;
 
   max-height: 4ch;
 }
+
+.links {
+  margin-left: 1vh;
+}
+
 .socialIcon:hover {
   color: #ededed;
   transition: all ease 0.5s;
 }
+
 .container {
-  background-color: #515443;
+  background-color: white;
   display: inline-flex;
   justify-content: flex-start;
   align-items: center;
   width: 100%;
-  height: 4vh;
+  height: 5vh;
   /* height: 7vh; */
 
   margin: 0;
   position: fixed;
   z-index: 3;
-  box-shadow: 0px 1px 10px #999;
 }
 
 @media (min-width: 1000px) {
