--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -3,7 +3,7 @@
 .navbarContainer {
   background-color: white;
   display: inline-flex;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
   /* top: 1vh; */
   width: 100%;
@@ -38,7 +38,7 @@
   top: -10px;
 }
 
-.name {
+/* .name {
   font-family: "Yeseva One", cursive;
   font-size: 2em;
   padding-right: 3vh;
@@ -47,7 +47,7 @@
   padding: 7vh;
   color: black;
   margin-top: 3vh;
-}
+} */
 
 .namelogo {
   height: 10vh;
@@ -69,9 +69,21 @@
   }
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 800px) and (max-width: 1068px) {
   .navbarContainer {
-    /* top: 3.5vh; */
+    text-align: center;
+  }
+  .namelogo {
+    height: 6vw;
+  }
+  .link {
+    padding: 3vw;
+  }
+}
+
+@media screen and (min-width: 900px) and (max-width: 1068px) {
+  .namelogo {
+    height: 6vw;
   }
 }
 
