--- a/src/components/Hamburger/styles.css
+++ b/src/components/Hamburger/styles.css
@@ -68,7 +68,7 @@
 .bm-item {
   display: inline-block;
 
-  color: black;
+  color: #ab6c46;
   margin-bottom: 10px;
   text-align: left;
   text-decoration: none;
