--- a/src/components/AboutMe/aboutme.module.css
+++ b/src/components/AboutMe/aboutme.module.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Serif+Display:wght@300;700&family=Red+Hat+Display:wght@400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Serif+Display:wght@300;700&family=Red+Hat+Display:wght@400;500&display=swap");
 
 .container {
   position: relative;
@@ -21,10 +22,19 @@
 }
 
 .image {
-  width: 35vh;
-  height: 50vh;
+  width: 45%;
+  height: 30%;
   object-fit: cover;
   border-radius: 150px 150px 0 0;
-  margin-top: 30vh;
-  margin-right: 90vh;
+  margin-top: 20vh;
+  margin-right: 1vh;
+}
+
+.aboutMe {
+  width: 40%;
+  margin-top: 20vh;
+  margin-left: 50vw;
+  font-family: "Red Hat Display", serif;
+  font-size: 1em;
+  font-weight: 300;
 }
