--- a/src/components/Home/home.module.css
+++ b/src/components/Home/home.module.css
@@ -362,6 +362,10 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Noto+Serif+Display:wght@700&family=Red+Hat+Display:wght@400;500&display=swap");
 
+html {
+  scroll-behavior: smooth;
+}
+
 .homeContainer {
   height: 100%;
   width: 100%;
