--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -20,7 +20,7 @@
   font-size: 1.1em;
   font-family: "Red Hat Display", sans-serif;
   font-weight: 100;
-  padding: 10vh;
+  padding: 5vh;
   border-bottom: 1px solid rgba(0, 0, 0, 0);
 
   transition: border-bottom 300ms;
@@ -50,7 +50,7 @@
 } */
 
 .namelogo {
-  height: 10vh;
+  width: 45vh;
 }
 
 @media screen and (max-width: 800px) {
