--- a/src/components/Projects/projectCard.module.css
+++ b/src/components/Projects/projectCard.module.css
@@ -90,7 +90,17 @@
 @media screen and (min-width: 420px) {
   .codeButton {
     bottom: 2vh;
-    left: 11vh;
+    left: vh;
+  }
+  .title {
+    font-size: 1.7em;
+  }
+  .subtitle {
+    font-size: 1.3em;
+    margin-top: vh;
+  }
+  .technologies {
+    font-size: 1.3em;
   }
 }
 
@@ -132,6 +142,19 @@
 @media (min-width: 1180px) and (min-height: 730px) {
   .codeButton {
     width: 100%;
-    left: 10vh;
+    left: 30vh;
+  }
+}
+
+@media (max-width: 340px) {
+  .image {
+    width: 70vw;
+    height: 100%;
+  }
+}
+
+@media all and (display-mode: fullscreen) {
+  .codeButton {
+    left: 25vh;
   }
 }
